# MSSD-Week-5-Attack-detection-Demo

./: .gitignore  CUSUM_demo.py  MLP_demo.py  README.md  pyproject.toml
CUSUM_results/: cusum_results.csv
MLP_results/: LIT101.h5
